[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/level_prefab_sprites/voodoo dolls/voodoo melvin.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/level_prefab_sprites/voodoo dolls/voodoo katrin.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/level_prefab_sprites/voodoo dolls/voodoo carrie.png" type="Texture" id=3]
[ext_resource path="res://src/level prefabs/voodoo dolls/VoodooDollPlayer.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 146, 236 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 146, 236 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 146, 236 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "voodoo carrie",
"speed": 0.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "voodoo katrin",
"speed": 0.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "voodoo melvin",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 41 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 59, 99 )

[sub_resource type="Animation" id=7]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PainReceiveEnemy/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PainReceiveYou/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "doll_hurt"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("PainReceiveEnemy/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PainReceiveYou/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt_the_player"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="VoodooDollPlayer" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "voodoo katrin"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -31 )
shape = SubResource( 3 )
disabled = true

[node name="PainReceiveEnemy" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PainReceiveEnemy"]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="PainReceiveYou" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PainReceiveYou"]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/doll_hurt = SubResource( 8 )

[connection signal="area_entered" from="PainReceiveEnemy" to="." method="_on_PainReceiveEnemy_area_entered"]
[connection signal="area_entered" from="PainReceiveYou" to="." method="_on_PainReceiveYou_area_entered"]
